@@ -1,3 +1,8 @@
+2007-06-29  Calvin Gaisford <calvinrg@gmail.com> 
+
+	* src/SendingHandler.cs, src/Application.cs, src/TransferStatusArgs.cs:
+	  Events
+
 2007-06-29  Brady Anderson <brady.anderson@gmail.com> 
 
 	added PhotoService to the project
